--- a/2-modal/index.html
+++ b/2-modal/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -78,11 +86,25 @@
         padding: 1rem 1.2rem;
       }
 
+      .show-modal--btn:focus,
+      .deactivate-btn:focus {
+        box-shadow: 0.5rem 0.5rem 1rem rgba(226, 38, 42, 0.5);
+      }
+
+      .show-modal--btn:hover,
+      .deactivate-btn:hover {
+        background-color: rgba(226, 38, 42, 0.85);
+      }
+
       .cancel-btn {
         padding: 0.75rem 1rem;
         font-size: 1.4rem;
         background-color: #fff;
         border: 1px solid #b8b8b8;
+      }
+
+      .cancel-btn:hover {
+        background-color: rgb(184, 184, 184, 0.5);
       }
 
       .deactivate-btn {
@@ -92,6 +114,10 @@
         border: none;
         font-size: 1.4rem;
         width: 10rem;
+      }
+
+      .deactivate-btn:hover {
+        background-color: rgba(226, 38, 42, 0.85);
       }
 
       /* Icon-stylings */
@@ -112,6 +138,11 @@
         width: 2.5em;
         transform: translateY(-1rem);
         cursor: pointer;
+        color: #8a8b99;
+      }
+
+      .close-icon:hover {
+        color: #000;
       }
 
       /* Initial-page-view-stying */
@@ -150,6 +181,41 @@
         background-color: rgb(132, 138, 150);
         backdrop-filter: blur(3px);
         z-index: 50;
+      }
+
+      @media only screen and (max-width: 56.25em) {
+        html {
+          font-size: 56%;
+        }
+      }
+
+      @media only screen and (max-width: 43.75em) {
+        html {
+          font-size: 50%;
+        }
+      }
+
+      @media only screen and (max-width: 35em) {
+        html {
+          font-size: 46%;
+        }
+
+        .container-body--main {
+          font-size: 1rem;
+        }
+
+        .modal-container {
+          display: grid;
+          grid-template-columns: max-content 1fr max-content;
+          grid-template-rows: max-content;
+          width: 35rem;
+        }
+
+        .close-icon {
+          transform: translateY(-0.1rem);
+          height: 2em;
+          width: 2em;
+        }
       }
     </style>
   </head>
@@ -190,18 +256,10 @@
           </div>
         </div>
         <div class="close-icon-container">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="1em"
-            height="1em"
-            viewBox="0 0 24 24"
+          <ion-icon
+            name="close-outline"
             class="close-icon close-modal"
-          >
-            <path
-              fill="#a6a6a6"
-              d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6z"
-            />
-          </svg>
+          ></ion-icon>
         </div>
       </div>
     </div>
