--- a/3-carousel/index.html
+++ b/3-carousel/index.html
@@ -64,8 +64,9 @@
         border-radius: 50%;
       }
 
-      .carousel__button:hover {
-        border: 4px solid rgb(204, 204, 204);
+      .carousel__button:hover,
+      .carousel__button.hover {
+        border: 4px solid #fff;
       }
 
       .carousel__button-left {
@@ -83,7 +84,7 @@
         width: 2.5rem;
         cursor: pointer;
         transform: translateY(-50%);
-        color: rgb(204, 204, 204);
+        color: #fff;
         background-color: #737a85;
         border-radius: 50%;
       }
@@ -97,7 +98,7 @@
       .carousel__dot {
         height: 1rem;
         width: 1rem;
-        background-color: rgb(204, 204, 204);
+        background-color: #fff;
         border-radius: 50%;
         margin: 0 0.5rem;
         cursor: pointer;
@@ -106,8 +107,8 @@
       }
 
       .carousel__dot.active {
-        background-color: rgba(204, 204, 204, 0.3);
-        border: 2px solid rgb(204, 204, 204);
+        background-color: rgba(204, 204, 204, 0.1);
+        border: 2px solid #fff;
       }
     </style>
   </head>
@@ -146,16 +147,32 @@
     </div>
   </body>
   <script>
-    //2nd approach
-
     let slidePosition = 0;
     const slides = document.getElementsByClassName("carousel__item");
     const totalSlides = slides.length;
     const nextButton = document.querySelector(".carousel__button-right");
     const prevButton = document.querySelector(".carousel__button-left");
     const dots = document.querySelectorAll(".carousel__dot");
+
     nextButton.addEventListener("click", moveToNextSlide);
     prevButton.addEventListener("click", moveToPrevSlide);
+
+    document.addEventListener("keydown", function (event) {
+      if (event.key === "ArrowRight") {
+        moveToNextSlide();
+        nextButton.classList.add("hover");
+        setTimeout(function () {
+          nextButton.classList.remove("hover");
+        }, 500);
+      } else if (event.key === "ArrowLeft") {
+        moveToPrevSlide();
+        prevButton.classList.add("hover");
+        setTimeout(function () {
+          prevButton.classList.remove("hover");
+        }, 500);
+      }
+    });
+
     function updateSlideAction() {
       for (let slide of slides) {
         slide.classList.remove("carousel__item--visible");
