--- a/4-tabs/index.html
+++ b/4-tabs/index.html
@@ -3,162 +3,139 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <title>Accordion</title>
+    <title>Tabs</title>
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
       }
-
       html {
         font-size: 62.5%;
+      }
+      body {
         font-family: sans-serif;
-      }
-
-      .hidden {
-        display: none;
-      }
-
-      /* Font-styles */
-      a {
-        text-decoration: none;
-        color: #d44d4e;
-      }
-
-      .accordion--header-text {
         font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #777;
+        padding: 1.6rem;
       }
 
-      .accordion--body {
-        font-size: 1.4rem;
-        display: none;
+      span {
+        font-weight: 600;
+        color: rgb(0, 0, 0, 0.8);
       }
 
-      .accordion--body.active {
-        display: block;
-      }
-
-      .accordion--header-text.active {
-        color: #4f79c9;
-      }
-
-      /* Icon-styles */
-      .accordion--header-icon {
-        font-size: 2.2rem;
-      }
-
-      .arrow-icon.active {
-        color: #4f79c9;
-        transform: rotate(180deg);
-      }
-
-      /* Layout */
-      .container {
-        width: 95%;
-        margin: 2rem auto;
-        border: 1px solid rgb(27, 27, 27, 0.2);
-        border-radius: 0.5rem;
-      }
-
-      .accordion--header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 2rem;
+      .tab {
+        padding: 1.6rem 2rem;
+        transition: all 0.2s;
         cursor: pointer;
       }
 
-      .accordion--body {
-        padding: 1rem 2rem;
+      .tabs {
+        list-style: none;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 1.6rem;
+        display: flex;
+        align-items: center;
+        gap: 2px;
+      }
+
+      .tab:hover,
+      .tab.active {
+        color: rgb(0, 82, 235, 0.8);
+        box-shadow: inset 0 -2px rgb(0, 82, 235, 0.8);
+      }
+      .tab-heading {
+        font-size: inherit;
+        font-weight: 600;
+      }
+      .container {
+        padding: 1.6rem;
+        background-color: #f9fafb;
+      }
+      .content {
+        display: none;
+      }
+      .content.active {
+        display: block;
       }
     </style>
   </head>
   <body>
+    <ul class="tabs">
+      <li class="tab tab--profile active">
+        <h2 class="tab-heading">Profile</h2>
+      </li>
+      <li class="tab tab--dashboard">
+        <h2 class="tab-heading">Dashboard</h2>
+      </li>
+      <li class="tab tab--settings">
+        <h2 class="tab-heading">Settings</h2>
+      </li>
+      <li class="tab tab--contacts">
+        <h2 class="tab-heading">Contacts</h2>
+      </li>
+    </ul>
     <div class="container">
-      <div class="accordion">
-        <div class="accordion--header">
-          <div class="accordion--header-text">Accordion Item #1</div>
-          <div class="accordion--header-icon">
-            <ion-icon name="chevron-down-outline" class="arrow-icon"></ion-icon>
-          </div>
-        </div>
-        <div class="accordion--body">
-          <strong>This is the first item's accordion body.</strong> It is shown
-          by default, until the collapse plugin adds the appropriate classes
-          that we use to style each element. These classes control the overall
-          appearance, as well as the showing and hiding via CSS transitions. You
-          can modify any of this with custom CSS or overriding our default
-          variables. It's also worth noting that just about any HTML can go
-          within the <a href="#">.accordion-body</a>, though the transition does
-          limit overflow.
-        </div>
+      <div class="content content--profile active">
+        <p>
+          This is some placeholder content the
+          <span>Profile tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
       </div>
-
-      <div class="accordion">
-        <div class="accordion--header">
-          <div class="accordion--header-text">Accordion Item #2</div>
-          <div class="accordion--header-icon">
-            <ion-icon name="chevron-down-outline" class="arrow-icon"></ion-icon>
-          </div>
-        </div>
-        <div class="accordion--body">
-          <strong>This is the second item's accordion body.</strong> It is shown
-          by default, until the collapse plugin adds the appropriate classes
-          that we use to style each element. These classes control the overall
-          appearance, as well as the showing and hiding via CSS transitions. You
-          can modify any of this with custom CSS or overriding our default
-          variables. It's also worth noting that just about any HTML can go
-          within the <a href="#">.accordion-body</a>, though the transition does
-          limit overflow.
-        </div>
+      <div class="content content--dashboard">
+        <p>
+          This is some placeholder content the
+          <span>Dashboard tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
       </div>
-
-      <div class="accordion">
-        <div class="accordion--header">
-          <div class="accordion--header-text">Accordion Item #3</div>
-          <div class="accordion--header-icon">
-            <ion-icon name="chevron-down-outline" class="arrow-icon"></ion-icon>
-          </div>
-        </div>
-        <div class="accordion--body">
-          <strong>This is the third item's accordion body.</strong> It is shown
-          by default, until the collapse plugin adds the appropriate classes
-          that we use to style each element. These classes control the overall
-          appearance, as well as the showing and hiding via CSS transitions. You
-          can modify any of this with custom CSS or overriding our default
-          variables. It's also worth noting that just about any HTML can go
-          within the <a href="#">.accordion-body</a>, though the transition does
-          limit overflow.
-        </div>
+      <div class="content content--settings">
+        <p>
+          This is some placeholder content the
+          <span>Settings tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
+      </div>
+      <div class="content content--contacts">
+        <p>
+          This is some placeholder content the
+          <span>content tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
       </div>
     </div>
-
-    <script>
-      const accordionHeaders = document.querySelectorAll(".accordion--header");
-
-      function handleAccordionClick(event) {
-        const header = event.currentTarget;
-        const accordion = header.parentElement;
-
-        header.querySelector(".arrow-icon").classList.toggle("active");
-        header
-          .querySelector(".accordion--header-text")
-          .classList.toggle("active");
-        accordion.querySelector(".accordion--body").classList.toggle("active");
-      }
-
-      accordionHeaders.forEach((header) => {
-        header.addEventListener("click", handleAccordionClick);
-      });
-    </script>
   </body>
+  <script>
+    const tabs = document.querySelectorAll(".tab");
+    let activeTab = "profile";
+
+    function clickAction(tab) {
+      document.querySelector(`.tab--${activeTab}`).classList.remove("active");
+      document
+        .querySelector(`.content--${activeTab}`)
+        .classList.remove("active");
+
+      activeTab = tab.innerText.toLowerCase();
+
+      document.querySelector(`.tab--${activeTab}`).classList.add("active");
+      document.querySelector(`.content--${activeTab}`).classList.add("active");
+    }
+
+    for (let i = 0; i < tabs.length; i++) {
+      const tab = tabs[i];
+      tab.addEventListener("click", () => clickAction(tab));
+    }
+  </script>
 </html>
