--- a/4-tabs/index.html
+++ b/4-tabs/index.html
@@ -61,6 +61,24 @@
       .content.active {
         display: block;
       }
+
+      @media only screen and (max-width: 50em) {
+        html {
+          font-size: 56%;
+        }
+      }
+
+      @media only screen and (max-width: 30em) {
+        html {
+          font-size: 50%;
+        }
+      }
+
+      @media only screen and (max-width: 25em) {
+        html {
+          font-size: 44%;
+        }
+      }
     </style>
   </head>
   <body>
